Puppeteer/EventSourcing/Follower/PatternGrammar.txt
# Pattern Matching DSL BNF Grammar

## Base Expressions (Commit 2.2)

```bnf
<pattern> ::= <pattern-list>

<pattern-list> ::= <expression> (<separator> <expression>)*

<separator> ::= ' '         # Space: patterns on the same line
              | '...'       # Three dots: syntactic sugar equivalent to space
              | '\n'        # Newline: patterns on different lines

<expression> ::= <assignment>
               | <instance-access>
               | <type-access>
               | <constructor-call>

<assignment> ::= <variable> '=' <assignment-value> ';'

<assignment-value> ::= <partial-pattern>
                     | <pattern-sequence>
                     | <instance-access>
                     | <type-access>
                     | <constructor-call>

<partial-pattern> ::= '...' <pattern-sequence>
                    | <pattern-sequence> '...'
                    | '...' <pattern-sequence> '...'

<pattern-sequence> ::= <pattern-element> ('...' <pattern-element>)*

<pattern-element> ::= <instance-access>
                    | <type-access>
                    | <constructor-call>

<instance-access> ::= '[' <instance-name> ':' <type-name> ']' <member-access>?

<type-access> ::= '[' <type-name> ']' <member-access>?

<constructor-call> ::= <type-name> '(' <parameter-list>? ')'
                     | '[' <type-name> ']' '(' <parameter-list>? ')'

<instance-name> ::= <identifier>
                  | '_'

<type-name> ::= <identifier>

<member-access> ::= '.' <identifier> <method-call>?
                  | '.' <identifier> <member-access>?

<method-call> ::= '(' <parameter-list>? ')'

<parameter-list> ::= <parameter> (',' <parameter>)*

<parameter> ::= <typed-parameter>
              | <literal>
              | <variable>
              | '_'

<typed-parameter> ::= <identifier> ':' <type-name>
                    | <literal> ':' <type-name>

<variable> ::= '$' <identifier>

<literal> ::= <string-literal>
            | <number-literal>
            | <bool-literal>
            | <datetime-literal>
            | <null-literal>

<identifier> ::= [a-zA-Z_#@][a-zA-Z0-9_#@]*

<string-literal> ::= "'" <any-char>* "'"

<number-literal> ::= <integer> | <double> | <decimal>

<integer> ::= [0-9]+

<double> ::= [0-9]+ '.' [0-9]+ ('d' | 'D')?
           | [0-9]+ ('d' | 'D')

<decimal> ::= [0-9]+ '.' [0-9]+ ('m' | 'M')
            | [0-9]+ ('m' | 'M')

<bool-literal> ::= 'true' | 'false'

<null-literal> ::= 'null'

<datetime-literal> ::= <date-literal>
                     | <time-literal>
                     | <date-literal> ' ' <time-literal>

<date-literal> ::= <month> '/' <day> '/' <year>

<time-literal> ::= <hour> ':' <minute> ':' <second>

<month> ::= [0-9] | [0-1][0-9]

<day> ::= [0-9] | [0-3][0-9]

<year> ::= [0-9][0-9][0-9][0-9]

<hour> ::= [0-9] | [0-2][0-9]

<minute> ::= [0-9] | [0-5][0-9]

<second> ::= [0-9] | [0-5][0-9]
```

## Notes:

### Pattern Separators
- **Space (' ')**: Separates patterns on the same line/command. Example: `[A].X() [B].Y()` looks for both in the same command.
- **Three dots ('...')**: In separator context, it is syntactic sugar equivalent to a space. Example: `[A].X() ... [B].Y()` is identical to `[A].X() [B].Y()`.
  - **Note**: The three dots require surrounding spaces when used as separators (they cannot be attached directly to identifiers).
- **Newline ('\n')**: Separates patterns on different lines/commands. Allows writing multiline patterns.

**IMPORTANT**: The three dots `...` have a **different meaning depending on the context**:
- **Outside assignments**: They are syntactic sugar for separating patterns (equivalent to a space)
- **Inside assignments**: They indicate partial matching (see the Assignments and Partial Matching section)

### Separator Examples
```
# These are EQUIVALENT (all look for both patterns in the same command):
[A].X() [B].Y()
[A].X() ... [B].Y()

# Multiline pattern (looks for X on one line, Y on another):
[A].X()
[B].Y()
```

### Assignments and Partial Matching (Commit 2.5 and 2.6)
Assignments capture values during matching and must end with a semicolon (`;`) for readability.

**Basic syntax:**
```
$variable = <expression>;
```

**Partial Matching with `...`:**
Inside an assignment, `...` indicates that there can be any expression before, after, or between the specified patterns.

**Semantics:**
- `$x = ... pattern;` → The pattern is somewhere on the right-hand side of the assignment
- `$x = pattern ...;` → The pattern is right after the `=`, there may be more expressions after it
- `$x = ... pattern;` → The pattern is at the end of the right-hand side
- `$x = ... pattern1 ... pattern2 ...;` → Both patterns are present, with any expression before, between, or after

**Examples:**

1. **Simple assignment (no partial matching):**
   ```
   $x = [String].Length;
   ```
   Matches exactly: `$x = [String].Length`

2. **Partial matching - pattern anywhere:**
   ```
   $x = ... [String].Length ...;
   ```
   Matches:
   - `$x = [String].Length`
   - `$x = [obj:Base].Property + [String].Length`
   - `$x = [String].Length * 2`
   - `$x = [obj:Base].Property + [String].Length * 2`

3. **Partial matching - pattern at the start:**
   ```
   $x = [String].Length ...;
   ```
   Matches:
   - `$x = [String].Length`
   - `$x = [String].Length * 2`
   - `$x = [String].Length + [other:Class].Value`

   Does NOT match:
   - `$x = 10 + [String].Length`

4. **Partial matching - pattern at the end:**
   ```
   $x = ... [String].Length;
   ```
   Matches:
   - `$x = [String].Length`
   - `$x = 10 + [String].Length`
   - `$x = [obj:Base].Property + [String].Length`

   Does NOT match:
   - `$x = [String].Length * 2`

5. **Multiple patterns with partial matching:**
   ```
   $result = ... [text:String].ToUpper() ... [String].Length ...;
   ```
   Matches any assignment that contains both calls somewhere, in that order

### Typed Parameters (Commit 2.3)
Parameters may optionally specify their type via the `:type` syntax:

**Syntax:**
- Identifier with type: `identifier:Type` (e.g., `date:DateTime`, `count:int`)
- Literal with type: `literal:Type` (e.g., `10:int`, `3.14:double`, `100:decimal`)
- Without type: The parser infers the literal's type automatically

**Validation Rules:**
- A literal must be compatible with the specified type
- `10:int` is valid
- `10:decimal` is **invalid** (must be `10m:decimal`)
- `3.14:double` is valid
- `3.14:int` is **invalid** (a double cannot be converted to int)

**Use Cases:**
- **Force a specific type:** `[Class].Method(10:decimal)` only matches if the parameter is decimal
- **Avoid ambiguity:** `date:DateTime` vs a variable named `date`
- **Validate overload:** Helps distinguish between method overloads

**IMPORTANT:** To avoid confusion, when an identifier (not a literal) is used in a parameter, the type **must** be specified with `:`.
- `[Class].Method(date:DateTime, _)` ✅ Correct - looks for a parameter of type DateTime
- `[Class].Method(date, _)` ❌ Incorrect - would look for a variable named `date`

**Supported types:**
- **Primitive types:** `int`, `string`, `bool`, `double`, `decimal`, `datetime`, `object`
- **Domain types:** Any class name from the business-logic assembly (e.g., `Foo`, `Bar`)
  - During the parsing phase, domain types are NOT validated against the loaded assemblies
  - Domain-type validation is performed later in the matching phase
  - Example: `[Container].AddItem(item:Item, count:int)`

### Method/Property Chaining (Commit 2.4)
The DSL fully supports chaining of methods and properties, reflecting common patterns in C# and LINQ.

**Syntax:**
```
[Type].Member1.Member2.Member3(...)
[Type].Method1().Property.Method2(...)
[instance:Type].Property.Method().Property
```

**Examples:**

1. **Property chaining:**
   ```
   [Container].Owner.Address.City
   ```
   Looks for access to the City property of Address of Owner in Container

2. **Mixed chaining (properties and methods):**
   ```
   [Container].Items.First().Item.GetPrice()
   ```
   - `Items` - property
   - `First()` - method
   - `Item` - property
   - `GetPrice()` - method

3. **Chaining with parameters:**
   ```
   [Container].Items.Where($condition).Select(item:Item).ToList()
   ```
   Typical LINQ pattern with variable and typed parameters

4. **Deep chaining:**
   ```
   [Root].Members.Find(_).Children.Last().Items.Sum()
   ```
   Multiple levels of navigation and operations

5. **Chaining with literals:**
   ```
   [String].Substring(0,10).ToUpper().Replace('A','B')
   ```
   Sequential operations with literal parameters

**Implementation:**
- The `MemberAccessNode` node has a `NextAccess` property that allows recursion
- It automatically distinguishes between properties (no parameters) and methods (with parentheses)
- It supports any chaining depth

### Other
- The constructor is recognized as a call to the class with parameters: `Class(param1, param2, ...)` or `[Class](param1, param2, ...)`.
- Method invocations are always of the form `instance.Method(...)`.
- The wildcards '_' may appear in place of instance names or as parameters.
- The variables '$identifier' capture values during matching.
- Comments // and /* */ are ignored by the lexer.
- Double literals may optionally end with 'd' or 'D' (e.g., 3.14d, 10d).
- Decimal literals must end with 'm' or 'M' instead of '%' (e.g., 3.14m, 100m).
- Datetime literals support: date only (MM/DD/YYYY or M/D/YYYY), time only (HH:MM:SS or H:MM:SS or H:M:S), or date with time (MM/DD/YYYY HH:MM:SS).
