Puppeteer/EventSourcing/Follower/PatternParser.cs
using Puppeteer.EventSourcing.Interpreter;
using Puppeteer.EventSourcing.Interpreter.Libraries;
using System;
using System.Collections.Generic;
using System.Globalization;

namespace Puppeteer.EventSourcing.Follower
{
	internal class PatternParser
	{
		private readonly Lexer lexer;
		private static readonly NumberFormatInfo customFormat;

		static PatternParser()
		{
			CultureInfo original = CultureInfo.GetCultureInfo("en-US");
			customFormat = (NumberFormatInfo)original.NumberFormat.Clone();
			customFormat.NumberDecimalSeparator = ".";
		}

		internal PatternParser()
		{
			lexer = new Lexer();
		}

		internal PatternListNode Parse(string pattern)
		{
			ArgumentNullException.ThrowIfNull(pattern);

			lexer.Source = pattern;
			return ParsePatternList();
		}

		// <pattern-list> ::= <expression> [<where-clause>]* (<separator> <expression> [<where-clause>]*)*
		// <separator> ::= ' ' | '...' | '\n'
		private PatternListNode ParsePatternList()
		{
			List<ExpressionNode> expressions = new List<ExpressionNode>();

			// Consume optional leading '...' (syntactic sugar).
			while (lexer.CurrentToken.Type == TokenType.ellipsis)
			{
				lexer.Accept(TokenType.ellipsis);
			}

			expressions.Add(ParseExpressionWithOptionalGuards());

			// Consume multiple expressions separated by spaces, '...', or newlines.
			while (lexer.CurrentToken.Type != TokenType.eof)
			{
				// Consume optional separators: '...' is syntactic sugar equivalent to a space.
				if (lexer.CurrentToken.Type == TokenType.ellipsis)
				{
					lexer.Accept(TokenType.ellipsis);
					// If '...' is followed by EOF, stop.
					if (lexer.CurrentToken.Type == TokenType.eof)
					{
						break;
					}
				}

				// Whitespace and newlines are handled automatically by the lexer.
				expressions.Add(ParseExpressionWithOptionalGuards());
			}

			lexer.Accept(TokenType.eof);
			return new PatternListNode(expressions);
		}

		// Parses an expression with optional guards and optional OR alternatives.
		private ExpressionNode ParseExpressionWithOptionalGuards()
		{
			ExpressionNode firstExpression = ParseExpressionWithGuards();

			// Check for OR alternatives (|).
			if (lexer.CurrentToken.Type == TokenType.logicalOr)
			{
				List<AlternativeBranch> branches = new List<AlternativeBranch>();

				// First branch.
				string firstLabel = TryParseAsLabel();
				branches.Add(new AlternativeBranch(firstExpression, firstLabel));

				// Additional branches.
				while (lexer.CurrentToken.Type == TokenType.logicalOr)
				{
					lexer.Accept(TokenType.logicalOr);
					ExpressionNode branchExpr = ParseExpressionWithGuards();
					string label = TryParseAsLabel();
					branches.Add(new AlternativeBranch(branchExpr, label));
				}

				return new AlternativeExpressionNode(branches);
			}

			return firstExpression;
		}

		// Parses an expression and, optionally, one or more 'where' clauses.
		private ExpressionNode ParseExpressionWithGuards()
		{
			ExpressionNode expression = ParseExpression();

			// Check for 'where' clauses.
			List<GuardClause> guards = null;
			while (lexer.CurrentToken.Type == TokenType.id && lexer.CurrentLexeme().SequenceEqual("where".AsSpan()))
			{
				if (guards == null) guards = new List<GuardClause>();
				guards.Add(ParseGuardClause());
			}

			if (guards != null)
			{
				return new GuardedExpressionNode(expression, guards);
			}

			return expression;
		}

		// Try to parse 'as label' after an OR expression.
		private string TryParseAsLabel()
		{
			if (lexer.CurrentToken.Type == TokenType.@as)
			{
				lexer.Accept(TokenType.@as);

				if (lexer.CurrentToken.Type == TokenType.stringLit)
				{
					string label = lexer.CurrentLexeme().ToString();
					lexer.Accept(TokenType.stringLit);
					return label;
				}

				throw new LanguageException($"Expected a string literal after 'as', but found '{lexer.CurrentLexeme()}'.");
			}

			return null;
		}

		// <where-clause> ::= 'where' <guard-expression>
		// <guard-expression> ::= '$variable' <comparison-op> <literal>
		//                      | 'not' 'contains' <string-literal>
		//                      | 'contains' <string-literal>
		private GuardClause ParseGuardClause()
		{
			// Consume 'where' (it is a contextual identifier).
			lexer.Accept(TokenType.id); // where

			// Check whether it is 'not contains' or 'contains'.
			if (lexer.CurrentToken.Type == TokenType.id)
			{
				ReadOnlySpan<char> currentLexeme = lexer.CurrentLexeme();

				if (currentLexeme.SequenceEqual("not".AsSpan()))
				{
					lexer.Accept(TokenType.id); // not

					if (lexer.CurrentToken.Type == TokenType.id && lexer.CurrentLexeme().SequenceEqual("contains".AsSpan()))
					{
						lexer.Accept(TokenType.id); // contains
						LiteralParameterNode literal = ParseLiteral();
						return new GuardClause(null, GuardOperator.NotContains, literal.Value, literal.LiteralType);
					}

					throw new LanguageException($"Expected 'contains' after 'not' in 'where' clause, but found '{lexer.CurrentLexeme()}'.");
				}

				if (currentLexeme.SequenceEqual("contains".AsSpan()))
				{
					lexer.Accept(TokenType.id); // contains
					LiteralParameterNode literal = ParseLiteral();
					return new GuardClause(null, GuardOperator.Contains, literal.Value, literal.LiteralType);
				}
			}

			// Must be: $variable op literal
			if (lexer.CurrentToken.Type != TokenType.variable)
			{
				throw new LanguageException($"Expected '$variable', 'not' or 'contains' after 'where', but found '{lexer.CurrentLexeme()}'.");
			}

			string variableName = lexer.CurrentLexeme().ToString();
			lexer.Accept(TokenType.variable);

			// Parse the comparison operator.
			GuardOperator op;
			switch (lexer.CurrentToken.Type)
			{
				case TokenType.equality:
					op = GuardOperator.Equal;
					lexer.Accept(TokenType.equality);
					break;
				case TokenType.inequality:
					op = GuardOperator.NotEqual;
					lexer.Accept(TokenType.inequality);
					break;
				case TokenType.greaterThan:
					op = GuardOperator.GreaterThan;
					lexer.Accept(TokenType.greaterThan);
					break;
				case TokenType.lessThan:
					op = GuardOperator.LessThan;
					lexer.Accept(TokenType.lessThan);
					break;
				case TokenType.greaterOrEqual:
					op = GuardOperator.GreaterOrEqual;
					lexer.Accept(TokenType.greaterOrEqual);
					break;
				case TokenType.lessOrEqual:
					op = GuardOperator.LessOrEqual;
					lexer.Accept(TokenType.lessOrEqual);
					break;
				default:
					throw new LanguageException($"Expected a comparison operator (==, !=, >, <, >=, <=) after '{variableName}', but found '{lexer.CurrentLexeme()}'.");
			}

			// Parse the literal value.
			LiteralParameterNode literalValue = ParseLiteral();

			return new GuardClause(variableName, op, literalValue.Value, literalValue.LiteralType);
		}

		// <expression> ::= <assignment> | <instance-access> | <type-access> | <constructor-call> | <tell-pattern>
		private ExpressionNode ParseExpression()
		{
			// Detect 'expose' patterns: expose expression alias;
			if (lexer.CurrentToken.Type == TokenType.expose)
			{
				return ParseExpose();
			}
			// Plan 7 (b) of the Tell primitive roadmap: tell-shaped patterns
			// parsed before bracket / id / variable forms. The `tell` keyword
			// (TokenType.tell) was added in Plan 1; the parser only recognises
			// it here, in the pattern grammar entry point.
			else if (lexer.CurrentToken.Type == TokenType.tell)
			{
				return ParseTellPattern();
			}
			// Detect assignments that start with $variable or _
			else if (lexer.CurrentToken.Type == TokenType.variable || lexer.CurrentToken.Type == TokenType.wildcard)
			{
				return ParseAssignment();
			}
			else if (lexer.CurrentToken.Type == TokenType.lBracket)
			{
				// Logic for [instance:Type], [Type], etc.
				return ParseBracketExpression();
			}
			else if (lexer.CurrentToken.Type == TokenType.id)
			{
				// Could be an assignment (id = ...) or a constructor (id(...)).
				string identifier = ParseIdentifier();

				if (lexer.CurrentToken.Type == TokenType.assign)
				{
					// Free-pattern assignment.
					return ParseAssignmentAfterIdentifier(identifier);
				}
				else if (lexer.CurrentToken.Type == TokenType.lParen)
				{
					// Constructor call.
					List<ParameterNode> parameters = ParseMethodCall();
					return new ConstructorCallNode(identifier, parameters);
				}
				else
				{
					throw new LanguageException($"Expected '=' or '(' after identifier '{identifier}', but found '{lexer.CurrentLexeme()}'.");
				}
			}
			else
			{
				throw new LanguageException($"Expected '[', identifier, variable or wildcard at the start of the expression, but found '{lexer.CurrentLexeme()}'.");
			}
		}

		private ExpressionNode ParseBracketExpression()
		{
			lexer.Accept(TokenType.lBracket);

			string firstId = ParseIdentifier();

			if (lexer.CurrentToken.Type == TokenType.colon)
			{
				// [instance:Type]
				lexer.Accept(TokenType.colon);
				string typeName = ParseIdentifier();
				lexer.Accept(TokenType.rBracket);

				MemberAccessNode memberAccess = null;
				if (lexer.CurrentToken.Type == TokenType.dot)
				{
					memberAccess = ParseMemberAccess();
				}

				return new InstanceAccessNode(firstId, typeName, memberAccess);
			}
			else if (lexer.CurrentToken.Type == TokenType.rBracket)
			{
				// [Type] form.
				lexer.Accept(TokenType.rBracket);

				if (lexer.CurrentToken.Type == TokenType.lParen)
				{
					// [Type](...) - constructor.
					List<ParameterNode> parameters = ParseMethodCall();
					return new ConstructorCallNode(firstId, parameters);
				}
				else if (lexer.CurrentToken.Type == TokenType.dot)
				{
					// [Type].Member - type access.
					MemberAccessNode memberAccess = ParseMemberAccess();
					return new TypeAccessNode(firstId, memberAccess);
				}
				else
				{
					// [Type] alone.
					return new TypeAccessNode(firstId, null);
				}
			}
			else
			{
				throw new LanguageException($"Expected ':' or ']' after the identifier in pattern, but found '{lexer.CurrentLexeme()}'.");
			}
		}

		// Parse tell-shaped patterns, mirroring the assertive DSL. Two forms:
		//
		//   tell <Message> [with <withParams>] to <Addressee>[(<instanceParam>)] [once <onceParam>]
		//   tell ack <ackIdParam> [from <Addressee>[(<instanceParam>)]]
		//
		// Each <param> can be a wildcard (_), a variable bind ($name), a literal, or
		// a typed variant. The addressee is a logical role; the transport is never
		// named in a pattern (it is not in the journal to match against).
		private ExpressionNode ParseTellPattern()
		{
			lexer.Accept(TokenType.tell);

			// `tell ack ...` form: contextual `ack` keyword, recognised by lexeme.
			if (lexer.CurrentToken.Type == TokenType.id
				&& lexer.CurrentLexeme().SequenceEqual("ack".AsSpan()))
			{
				lexer.Accept(TokenType.id); // consume 'ack'
				ParameterNode ackIdParameter = ParseParameter();

				string fromAddressee = null;
				ParameterNode fromInstanceParameter = null;
				if (lexer.CurrentToken.Type == TokenType.id
					&& lexer.CurrentLexeme().SequenceEqual("from".AsSpan()))
				{
					lexer.Accept(TokenType.id); // consume 'from'
					if (lexer.CurrentToken.Type != TokenType.id)
					{
						throw new LanguageException($"Expected an addressee role identifier after 'from' in 'tell ack ... from <Addressee>', but found '{lexer.CurrentLexeme()}'.");
					}
					fromAddressee = ParseIdentifier();
					if (lexer.CurrentToken.Type == TokenType.lParen)
					{
						lexer.Accept(TokenType.lParen);
						fromInstanceParameter = ParseParameter();
						lexer.Accept(TokenType.rParen);
					}
				}

				return new TellAckPatternNode(ackIdParameter, fromAddressee, fromInstanceParameter);
			}

			// Assertive `tell <Message> [with <params>] to <Addressee>[(<param>)] [once <param>]` form.
			if (lexer.CurrentToken.Type != TokenType.id)
			{
				throw new LanguageException($"Expected a message name or 'ack' after 'tell' in pattern, but found '{lexer.CurrentLexeme()}'.");
			}
			string messageName = ParseIdentifier();

			List<ParameterNode> withParameters = new List<ParameterNode>();
			if (lexer.CurrentToken.Type == TokenType.id
				&& lexer.CurrentLexeme().SequenceEqual("with".AsSpan()))
			{
				lexer.Accept(TokenType.id); // consume 'with'
				while (true)
				{
					withParameters.Add(ParseParameter());
					if (lexer.CurrentToken.Type == TokenType.comma)
					{
						lexer.Accept(TokenType.comma);
						continue;
					}
					break;
				}
			}

			if (!(lexer.CurrentToken.Type == TokenType.id && lexer.CurrentLexeme().SequenceEqual("to".AsSpan())))
			{
				throw new LanguageException($"Expected 'to <Addressee>' after the message in 'tell <Message> ... to <Addressee>', but found '{lexer.CurrentLexeme()}'.");
			}
			lexer.Accept(TokenType.id); // consume 'to'

			if (lexer.CurrentToken.Type != TokenType.id)
			{
				throw new LanguageException($"Expected an addressee role identifier after 'to' in 'tell <Message> ... to <Addressee>', but found '{lexer.CurrentLexeme()}'.");
			}
			string addressee = ParseIdentifier();

			ParameterNode addresseeInstanceParameter = null;
			if (lexer.CurrentToken.Type == TokenType.lParen)
			{
				lexer.Accept(TokenType.lParen);
				addresseeInstanceParameter = ParseParameter();
				lexer.Accept(TokenType.rParen);
			}

			ParameterNode onceParameter = null;
			if (lexer.CurrentToken.Type == TokenType.id
				&& lexer.CurrentLexeme().SequenceEqual("once".AsSpan()))
			{
				lexer.Accept(TokenType.id); // consume 'once'
				onceParameter = ParseParameter();
			}

			return new TellPatternNode(messageName, withParameters, addressee, addresseeInstanceParameter, onceParameter);
		}

		// <assignment> ::= (<variable> | <wildcard> | <identifier>) [':' <type>] '=' <assignment-value> ';'
		private AssignmentNode ParseAssignment()
		{
			string variableName;

			if (lexer.CurrentToken.Type == TokenType.wildcard)
			{
				variableName = "_";
				lexer.Accept(TokenType.wildcard);
			}
			else if (lexer.CurrentToken.Type == TokenType.variable)
			{
				variableName = lexer.CurrentLexeme().ToString();
				lexer.Accept(TokenType.variable);
			}
			else
			{
				// This handles the free-pattern case that was already consumed
				// and is called from ParseExpression.
				throw new InvalidOperationException($"{nameof(ParseAssignment)} must not be called directly with an id token.");
			}

			return ParseAssignmentAfterIdentifier(variableName);
		}

		private AssignmentNode ParseAssignmentAfterIdentifier(string variableName)
		{
			// Optional: parse a type: $variable:Type or anInstance:Type.
			if (lexer.CurrentToken.Type == TokenType.colon)
			{
				lexer.Accept(TokenType.colon);
				Type paramType = ParseType();
				variableName = variableName + ":" + paramType.Name;
			}

			lexer.Accept(TokenType.assign);

			ExpressionNode value = ParseAssignmentValue();

			lexer.Accept(TokenType.semicolon);

			return new AssignmentNode(variableName, value);
		}

		// ParseAssignmentValue: parses the right-hand side of an assignment.
		// Can be: a partial pattern (... pattern ...) or a simple expression.
		private ExpressionNode ParseAssignmentValue()
		{
			bool hasLeadingWildcard = false;
			List<ExpressionNode> patterns = new List<ExpressionNode>();

			// Check if it starts with '...'.
			if (lexer.CurrentToken.Type == TokenType.ellipsis)
			{
				hasLeadingWildcard = true;
				lexer.Accept(TokenType.ellipsis);
			}

			// Parse the first pattern (required).
			patterns.Add(ParsePatternElement());

			// Check for additional patterns separated by '...' or a trailing '...'.
			bool hasTrailingWildcard = false;

			while (lexer.CurrentToken.Type == TokenType.ellipsis)
			{
				lexer.Accept(TokenType.ellipsis);

				// If '...' is followed by ';' then it's a trailing wildcard.
				if (lexer.CurrentToken.Type == TokenType.semicolon)
				{
					hasTrailingWildcard = true;
					break;
				}

				// Otherwise, another pattern must follow.
				patterns.Add(ParsePatternElement());
			}

			// If there is just one pattern and no wildcards, return the simple expression.
			if (patterns.Count == 1 && !hasLeadingWildcard && !hasTrailingWildcard)
			{
				return patterns[0];
			}

			// If there are wildcards or multiple patterns, build a PartialPatternNode.
			return new PartialPatternNode(hasLeadingWildcard, patterns, hasTrailingWildcard);
		}

		// ParsePatternElement: parses a single pattern element.
		// Can be: [instance:Type].Member, [Type].Member, Type(...), a literal, or a wildcard.
		private ExpressionNode ParsePatternElement()
		{
			// Check for a simple wildcard.
			if (lexer.CurrentToken.Type == TokenType.wildcard)
			{
				lexer.Accept(TokenType.wildcard);
				return new WildcardExpressionNode();
			}

			// Check for a literal (number, string, etc.).
			if (lexer.CurrentToken.Type == TokenType.number ||
				lexer.CurrentToken.Type == TokenType.@decimal ||
				lexer.CurrentToken.Type == TokenType.@double ||
				lexer.CurrentToken.Type == TokenType.stringLit ||
				lexer.CurrentToken.Type == TokenType.boolTrue ||
				lexer.CurrentToken.Type == TokenType.boolFalse)
			{
				return new LiteralExpressionNode(ParseLiteral());
			}

			if (lexer.CurrentToken.Type == TokenType.lBracket)
			{
				// Could be [instance:Type], [Type], or [Type](...).
				lexer.Accept(TokenType.lBracket);

				string firstId = ParseIdentifier();

				if (lexer.CurrentToken.Type == TokenType.colon)
				{
					// [instance:Type] form.
					lexer.Accept(TokenType.colon);
					string typeName = ParseIdentifier();
					lexer.Accept(TokenType.rBracket);

					MemberAccessNode memberAccess = null;
					if (lexer.CurrentToken.Type == TokenType.dot)
					{
						memberAccess = ParseMemberAccess();
					}

					var instanceAccess = new InstanceAccessNode(firstId, typeName, memberAccess);

					// Check for assignment form: [instance:Type].Member = value ;
					if (lexer.CurrentToken.Type == TokenType.assign)
					{
						lexer.Accept(TokenType.assign);
						ExpressionNode value = ParseAssignmentValue();
						lexer.Accept(TokenType.semicolon);
						return new AssignmentNode(instanceAccess.ToString(), value);
					}

					return instanceAccess;
				}
				else if (lexer.CurrentToken.Type == TokenType.rBracket)
				{
					// [Type] - either a type access or a constructor call.
					lexer.Accept(TokenType.rBracket);

					if (lexer.CurrentToken.Type == TokenType.lParen)
					{
						// [Type](...) - constructor.
						List<ParameterNode> parameters = ParseMethodCall();
						return new ConstructorCallNode(firstId, parameters);
					}
					else if (lexer.CurrentToken.Type == TokenType.dot)
					{
						// [Type].Member - type access.
						MemberAccessNode memberAccess = ParseMemberAccess();
						var typeAccess = new TypeAccessNode(firstId, memberAccess);

						// Check for assignment form: [Type].Member = value ;
						if (lexer.CurrentToken.Type == TokenType.assign)
						{
							lexer.Accept(TokenType.assign);
							ExpressionNode value = ParseAssignmentValue();
							lexer.Accept(TokenType.semicolon);
							return new AssignmentNode(typeAccess.ToString(), value);
						}

						return typeAccess;
					}
					else
					{
						// [Type] alone - type access without a member.
						return new TypeAccessNode(firstId, null);
					}
				}
				else
				{
					throw new LanguageException($"Expected ':' or ']' after the identifier in pattern, but found '{lexer.CurrentLexeme()}'.");
				}
			}
			else if (lexer.CurrentToken.Type == TokenType.id)
			{
				// Could be Type(...) - constructor.
				string typeName = ParseIdentifier();

				if (lexer.CurrentToken.Type == TokenType.lParen)
				{
					// Type(...) - constructor.
					List<ParameterNode> parameters = ParseMethodCall();
					return new ConstructorCallNode(typeName, parameters);
				}
				else
				{
					throw new LanguageException($"Expected '(' after identifier '{typeName}' for a constructor call, but found '{lexer.CurrentLexeme()}'.");
				}
			}
			else
			{
				throw new LanguageException($"Expected '[' or an identifier in pattern, but found '{lexer.CurrentLexeme()}'.");
			}
		}

		// <member-access> ::= '.' <identifier> <method-call>? | '.' <identifier> <member-access>?
		private MemberAccessNode ParseMemberAccess()
		{
			lexer.Accept(TokenType.dot);
			string memberName = ParseIdentifier();

			List<ParameterNode> parameters = null;
			MemberAccessNode nextAccess = null;

			if (lexer.CurrentToken.Type == TokenType.lParen)
			{
				// Method call.
				parameters = ParseMethodCall();

				// Check for further chaining.
				if (lexer.CurrentToken.Type == TokenType.dot)
				{
					nextAccess = ParseMemberAccess();
				}
			}
			else if (lexer.CurrentToken.Type == TokenType.dot)
			{
				// Property with chaining.
				nextAccess = ParseMemberAccess();
			}
			// else: property without chaining.

			return new MemberAccessNode(memberName, parameters, nextAccess);
		}

		// <method-call> ::= '(' <parameter-list>? ')'
		private List<ParameterNode> ParseMethodCall()
		{
			lexer.Accept(TokenType.lParen);

			List<ParameterNode> parameters = new List<ParameterNode>();

			if (lexer.CurrentToken.Type != TokenType.rParen)
			{
				parameters = ParseParameterList();
			}

			lexer.Accept(TokenType.rParen);
			return parameters;
		}

		// <parameter-list> ::= <parameter> (',' <parameter>)*
		private List<ParameterNode> ParseParameterList()
		{
			List<ParameterNode> parameters = new List<ParameterNode>();

			parameters.Add(ParseParameter());

			while (lexer.CurrentToken.Type == TokenType.comma)
			{
				lexer.Accept(TokenType.comma);
				parameters.Add(ParseParameter());
			}

			return parameters;
		}

		// <parameter> ::= <typed-parameter> | <literal> | <variable> | '_'
		// <typed-parameter> ::= <identifier> ':' <type-name> | <literal> ':' <type-name>
		private ParameterNode ParseParameter()
		{
			// Argument that is a nested call-with-receiver: foo([_:Derived].goo($x)).
			// Reuses ParsePatternElement for the bracketed form ([instance:Type].m(...)
			// or [Type].m(...)) and wraps it. The receiver carries its type, which is what
			// the matcher needs to resolve the inner method.
			if (lexer.CurrentToken.Type == TokenType.lBracket)
			{
				ExpressionNode nestedCall = ParsePatternElement();
				return new NestedCallParameterNode(nestedCall);
			}

			if (lexer.CurrentToken.Type == TokenType.wildcard)
			{
				lexer.Accept(TokenType.wildcard);

				// Check whether the wildcard has a type: _:Type
				if (lexer.CurrentToken.Type == TokenType.colon)
				{
					lexer.Accept(TokenType.colon);
					Type paramType = ParseType();
					return new TypedParameterNode(null, paramType);
				}

				return new WildcardParameterNode();
			}
			else if (lexer.CurrentToken.Type == TokenType.variable)
			{
				string varName = lexer.CurrentLexeme().ToString();
				lexer.Accept(TokenType.variable);

				// Check whether the variable has a type: $variable:Type
				if (lexer.CurrentToken.Type == TokenType.colon)
				{
					lexer.Accept(TokenType.colon);
					Type paramType = ParseType();
					return new TypedParameterNode(varName, paramType);
				}

				return new VariableParameterNode(varName);
			}
			else if (lexer.CurrentToken.Type == TokenType.id)
			{
				// Could be identifier:Type, or just an identifier (free pattern).
				string identifier = lexer.CurrentLexeme().ToString();
				lexer.Accept(TokenType.id);

				if (lexer.CurrentToken.Type == TokenType.colon)
				{
					// Typed parameter: identifier:Type.
					lexer.Accept(TokenType.colon);
					Type paramType = ParseType();
					return new TypedParameterNode(identifier, paramType);
				}
				else
				{
					// Free pattern: identifier without a type.
					// Captures the identifier name from the script.
					return new TypedParameterNode(identifier, typeof(string));
				}
			}
			else
			{
				// Literal, possibly with an optional type.
				return ParseLiteralWithOptionalType();
			}
		}

		// ParseLiteralWithOptionalType: literal with an optional type (literal:Type).
		private LiteralParameterNode ParseLiteralWithOptionalType()
		{
			LiteralParameterNode literal = ParseLiteral();

			// Check for an explicit type.
			if (lexer.CurrentToken.Type == TokenType.colon)
			{
				lexer.Accept(TokenType.colon);
				Type explicitType = ParseType();

				// Validate that the explicit type is compatible with the literal.
				ValidateLiteralType(literal, explicitType);

				return new LiteralParameterNode(literal.Value, literal.LiteralType, explicitType);
			}

			return literal;
		}
